--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  
+  <%= render "user/shared/error_messages", resource: resource %>
+
   <div class="field">
     <%= f.label :username %><br>
     <%= f.text_field :username %>
@@ -31,4 +31,4 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "user/shared/links" %>
