--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,4 @@
-<div class="container">
-  <h1>bootstrap練習</h1>
+<div class="image-container">
+  <%= image_tag 'bike1.jpg', class: "img-fluid" %>
+  <span class="overlay-text">about</span>
 </div>
