--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,12 +3,22 @@
     display: inline-block;
 }
 
-.overlay-text {
+.about {
     position: absolute;
-    top: 100px;
-    left: 100px;
-    color: white;
-    font-size: 40px;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 5px;
+    top: 0px;
+    right: 0px;
+    color: #444444;
+    font-size: 100%;
+    background-color: #D3D3D3;
+    padding: 10px 40px;
+    margin: 10% 15%;
+    text-align: center;
+    box-shadow: 60px -16px teal;
+}
+
+.about-title {
+    display: block;
+    font-size: 150%;
+    margin: 0 auto;
+    width: fit-content;
 }
