--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -1,13 +1,43 @@
 <div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-8">
-      <div class="input-group">
-        <div class="text-form">
-          <input type="text" class="form-control" placeholder="テキスト入力欄">
+  <div class="col-md-7">
+    <div class="tweet-form">
+      <%= form_for(@tweet) do |f| %>
+        <div class="field">
+          <%= f.text_area :content, placeholder: "投稿できます", style: "border: none; width: 100%;", class: "no-resize" %>
         </div>
-        <span class="input-group-btn">
-          <%= link_to '投稿', tweets_path, class: 'btn btn-default', type: 'button' %>
-        </span>
-      </div>
+        <div class="space-between">
+          <%= f.label :picture, class: "image-upload-button" do %>
+            <i class="far fa-image"></i>
+            <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', style: "display: none;" %>
+          <% end %>
+          <%= f.submit "投稿", class: "btn btn-dark", style: "float: right;" %>
+        </div>
+      <% end %>
+    </div>
+    <div class="mt-3">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link text-center px-5" href="#" id="allTweets">つぶやき</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロー</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </div>
 </div>
+<script>
+    $(document).ready(function() {
+      $('.nav-link').click(function(e) {
+        e.preventDefault();
+        $('.nav-link').removeClass('selected-link'); // すべてのリンクから選択クラスを削除
+        $(this).addClass('selected-link'); // クリックされたリンクに選択クラスを追加
+        var linkText = $(this).text(); // クリックされたリンクのテキストを取得
+        $('#tweetList').html('<p>' + linkText + 'を選択しました。</p>');
+      });
+    });
+</script>
