--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -38,3 +38,28 @@
     border: none; /* フォーカス時の枠線を消す */
     box-shadow: none; /* フォーカス時のボックスシャドウを消す */
 }
+
+.selected-link::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px; /* 下線の太さを指定 */
+    background-color: #4a4a4b; /* 下線の色を指定 */
+}
+
+.tweet-container {
+    padding: 10px;
+}
+
+.tweet-container:hover {
+    background-color: rgba(0, 0, 0, 0.05); /* 背景色を少し濃くする */
+}
+
+.tweet-link {
+    color: #333;
+    text-decoration: none !important; /* 下線をなしにする */
+}
+  /* フォーカス時のスタイルを追加 */
+.tweet-link:focus {
+   outline: none; /* フォーカス時の枠線を削除 */
+  }
