--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -38,7 +38,31 @@
                 <div class="ml-3"><%= @user.username %></div>
               </div>
               <div class="mt-2 mb-4 ml-5"><%= tweet.content %></div>
-              <p style="text-align: right;"><%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %></p>
+              <div style="display: flex; justify-content: flex-start;">
+                <div>
+                  <% if tweet.liked_by?(current_user) %>
+                    <p>
+                      <%= link_to tweet_like_path(tweet), method: :delete do %>
+                        <i class="fa-solid fa-heart"></i>
+                        <span class="like-count"><%= tweet.likes.count %></span>
+                      <% end %>
+                    </p>
+                    <% else %>
+                    <p>
+                      <%= link_to tweet_like_path(tweet), method: :post do %>
+                        <i class="fa-regular fa-heart"></i>
+                        <span class="like-count"><%= tweet.likes.count %></span> 
+                      <% end %>
+                    </p>
+                  <% end %>
+                </div>
+                <div class="mx-3"><span>|</span></div>
+                <div style="margin-left: auto;">
+                  <span class="tweet-date">
+                    <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
+                  </span>
+                </div>
+              </div>
             <% end %>
           </div>
         <% end %>
