--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,6 +1,15 @@
 <!--マイページ-->
 <div class="container px-5 px-sm-0">
   <div class="col-md-7">
+    <!--プロフィール-->
+    <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
+      <div style="display: flex; align-items: center;">
+        <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+        <div class="ml-3"><%= @user.username %></div>
+      </div>
+      
+    </div>
+    <!--投稿ホーム-->
     <div class="tweet-form">
       <%= form_for(@tweet) do |f| %>
         <div class="field">
