--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -7,7 +7,9 @@
         <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
         <div class="ml-3"><%= @user.username %></div>
       </div>
-      
+      <div>
+        <%= @user.introduction %>
+      </div>
     </div>
     <!--投稿ホーム-->
     <div class="tweet-form">
