--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,20 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container">
           <a class="navbar-brand p-3" href="/"><%= image_tag('logo.png', size: '100x50') %></a>
-            <ul class="navbar-nav ml-auto">
-              <% if user_signed_in? %>
+            <% if user_signed_in? %>
+              <div class="col">
+                <div class="search_form">
+                  <%= form_with url: search_path, local: true, method: :get do |f| %>
+                    <%= f.text_field :word %>
+                    <%= f.select :range, options_for_select([['User'], ['Tweet']]) %>
+                    <%= f.select :serch, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],["後方一致","backward_match"],["部分一致","partial_match"]]) %>
+                    <%= button_tag(type: 'submit', class: 'btn btn-dark') do %>
+                      <i class="fa-solid fa-magnifying-glass"></i>
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item bg-dark rounded p-2 m-2">
                   <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-light" %>
                 </li>
