--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,13 +21,17 @@
         <div class="container">
           <a class="navbar-brand p-3" href="/"><%= image_tag('logo.png', size: '100x50') %></a>
             <% if user_signed_in? %>
+              <div style="align-items: center;">
+                <%= image_tag current_user.get_profile_image(50, 50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+                <div class="text-center"><%= current_user.username %></div>
+              </div>
               <div class="col">
                 <div class="search_form">
                   <%= form_with url: search_path, local: true, method: :get do |f| %>
                     <%= f.text_field :word %>
                     <%= f.select :range, options_for_select([['User'], ['Tweet']]) %>
                     <%= f.select :serch, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],["後方一致","backward_match"],["部分一致","partial_match"]]) %>
-                    <%= button_tag(type: 'submit', class: 'btn btn-dark') do %>
+                    <%= link_to search_path(@search_params), class: 'btn btn-dark' do %>
                       <i class="fa-solid fa-magnifying-glass"></i>
                     <% end %>
                   <% end %>
@@ -38,12 +42,14 @@
                   <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-light" %>
                 </li>
               <% else %>
-                <li class="nav-item bg-dark rounded p-2 m-2">
-                  <%= link_to "新規登録", new_user_registration_path, class: "text-light" %>
-                </li>
-                <li class="nav-item bg-dark rounded p-2 m-2">
-                  <%= link_to "ログイン", new_user_session_path, class: "text-light" %>
-                </li>
+                <div class="text-right" style="display: inline-flex;">
+                  <li class="nav-item bg-dark rounded p-2 m-2">
+                    <%= link_to "新規登録", new_user_registration_path, class: "text-light" %>
+                  </li>
+                  <li class="nav-item bg-dark rounded p-2 m-2">
+                    <%= link_to "ログイン", new_user_session_path, class: "text-light" %>
+                  </li>
+                </div>
               <% end %>
             </ul>
           </div>
