--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -14,61 +14,63 @@
         </div>
       <% end %>
     </div>
-    <div class="mt-3">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link text-center px-5" href="#" id="allTweets">つぶやき</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロー</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      
-      <% @tweets.each do |tweet| %>
-          <div class="tweet-container">
-            <%= link_to tweet_path(tweet.id), class: 'tweet-link' do %>
-              <div style="display: flex; align-items: center;">
-                <% if tweet.user.profile_image.attached? %>
-                  <%= image_tag tweet.user.profile_image.variant(resize: "50x50"), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-                <% else %>
-                  <%= image_tag 'bike_noimage.jpg' %>
-                <% end %>
-                <div class="ml-3"><%= tweet.user.username %></div>
-              </div>
-              <div class="mt-2 mb-4 ml-5"><%= tweet.content %></div>
-              <div style="display: flex; justify-content: flex-start;">
-                <div>
-                  <% if tweet.liked_by?(current_user) %>
-                    <p>
-                      <%= link_to tweet_like_path(tweet), method: :delete do %>
-                        <i class="fa-solid fa-heart"></i>
-                        <span class="like-count"><%= tweet.likes.count %></span>
-                      <% end %>
-                    </p>
-                    <% else %>
-                    <p>
-                      <%= link_to tweet_like_path(tweet), method: :post do %>
-                        <i class="fa-regular fa-heart"></i>
-                        <span class="like-count"><%= tweet.likes.count %></span> 
-                      <% end %>
-                    </p>
-                  <% end %>
-                </div>
-                <div class="mx-3"><span>|</span></div>
-                <div style="margin-left: auto;">
-                  <span class="tweet-date">
-                    <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
-                  </span>
-                </div>
-              </div>
-            <% end %>
+    <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
+      <div class="mt-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container">
+            <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
+              <li class="nav-item">
+                <a class="nav-link text-center px-5" href="#" id="allTweets">つぶやき</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロー</a>
+              </li>
+            </ul>
           </div>
-      <% end %>
-    </div>
+        </nav>
+        
+        <% @tweets.each do |tweet| %>
+            <div class="tweet-container">
+              <%= link_to tweet_path(tweet.id), class: 'tweet-link' do %>
+                <div style="display: flex; align-items: center;">
+                  <% if tweet.user.profile_image.attached? %>
+                    <%= image_tag tweet.user.profile_image.variant(resize: "50x50"), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+                  <% else %>
+                    <%= image_tag 'bike_noimage.jpg' %>
+                  <% end %>
+                  <div class="ml-3"><%= tweet.user.username %></div>
+                </div>
+                <div class="mt-2 mb-4 ml-5"><%= tweet.content %></div>
+                <div style="display: flex; justify-content: flex-start;">
+                  <div>
+                    <% if tweet.liked_by?(current_user) %>
+                      <p>
+                        <%= link_to tweet_like_path(tweet), method: :delete do %>
+                          <i class="fa-solid fa-heart"></i>
+                          <span class="like-count"><%= tweet.likes.count %></span>
+                        <% end %>
+                      </p>
+                      <% else %>
+                      <p>
+                        <%= link_to tweet_like_path(tweet), method: :post do %>
+                          <i class="fa-regular fa-heart"></i>
+                          <span class="like-count"><%= tweet.likes.count %></span> 
+                        <% end %>
+                      </p>
+                    <% end %>
+                  </div>
+                  <div class="mx-3"><span>|</span></div>
+                  <div style="margin-left: auto;">
+                    <span class="tweet-date">
+                      <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
+                    </span>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+        <% end %>
+      </div>
+    </div
   </div>
 </div>
 <script>
