--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,10 @@
           <a class="navbar-brand p-3" href="/"><%= image_tag('logo.png', size: '100x50') %></a>
             <% if user_signed_in? %>
               <div style="align-items: center;">
-                <%= image_tag current_user.get_profile_image(50, 50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-                <div class="text-center"><%= current_user.username %></div>
+                <%= link_to user_path(current_user) do %>
+                  <%= image_tag current_user.get_profile_image(50, 50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+                  <div class="text-center"><%= current_user.username %></div>
+                <% end %>
               </div>
               <div class="col">
                 <div class="search_form">
