--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -3,9 +3,25 @@
   <div class="col-md-7">
     <!--プロフィール-->
     <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
-      <div style="display: flex; align-items: center;">
-        <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-        <div class="ml-3"><%= @user.username %></div>
+      <div style="display: flex; align-items: center; justify-content: space-between;">
+        <div style="display: flex; align-items: center;">
+          <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+          <div class="ml-3"><%= @user.username %></div>
+        </div>
+        <!-- アクションボタン -->
+          <div class="actions">
+            <% if current_user == @user %>
+            <div class="profile_icon">
+              <%= link_to edit_user_registration_path, class: "btn btn-outline-secondary btn-block", method: :get do %>
+                <i class="fa-solid fa-user-pen"></i>
+              <% end %>
+            </div>
+            <% else %>
+            <!-- フォローボタンとDMボタンを表示する -->
+              <%= button_to "Follow", follow_user_path(@user), method: :post %>
+              <!--<%= button_to "Send DM", new_message_path(user_id: @user.id) %>-->
+            <% end %>
+          </div>
       </div>
       <div>
         <%= @user.introduction %>
