--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,9 @@
               </div>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item bg-dark rounded p-2 m-2">
+                  <%= link_to "ツイート一覧", tweets_path, class: "text-light" %>
+                </li>
+                <li class="nav-item bg-dark rounded p-2 m-2">
                   <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-light" %>
                 </li>
               <% else %>
