--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,98 +1,118 @@
 <!--マイページ-->
 <div class="container px-5 px-sm-0">
-  <div class="col-md-7">
-    <!--プロフィール-->
-    <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
-      <div style="display: flex; align-items: center; justify-content: space-between;">
-        <div style="display: flex; align-items: center;">
-          <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-          <div class="ml-3"><%= @user.username %></div>
-        </div>
-        <!-- アクションボタン -->
-          <div class="actions">
-            <% if current_user == @user %>
-            <div class="profile_icon">
-              <%= link_to edit_user_registration_path, class: "btn btn-outline-secondary btn-block", method: :get do %>
-                <i class="fa-solid fa-user-pen"></i>
+  <div class="row">
+    <div class="col-md-7">
+      <!--プロフィール-->
+      <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
+        <div style="display: flex; align-items: center; justify-content: space-between;">
+          <div style="display: flex; align-items: center;">
+            <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+            <div class="ml-3"><%= @user.username %></div>
+          </div>
+          <!-- アクションボタン -->
+            <div class="actions">
+              <% if current_user == @user %>
+              <div class="profile_icon">
+                <%= link_to edit_user_registration_path, class: "btn btn-outline-secondary btn-block", method: :get do %>
+                  <i class="fa-solid fa-user-pen"></i>
+                <% end %>
+              </div>
+              <% else %>
+              <!-- フォローボタンとDMボタンを表示する -->
+                <%= button_to "Follow", followings_path(@user), method: :post %>
+                <!--<%= button_to "Send DM", new_message_path(user_id: @user.id) %>-->
               <% end %>
             </div>
-            <% else %>
-            <!-- フォローボタンとDMボタンを表示する -->
-              <%= button_to "Follow", follow_user_path(@user), method: :post %>
-              <!--<%= button_to "Send DM", new_message_path(user_id: @user.id) %>-->
-            <% end %>
-          </div>
-      </div>
-      <div>
-        <%= @user.introduction %>
-      </div>
-    </div>
-    <!--投稿ホーム-->
-    <div class="tweet-form">
-      <%= form_for(@tweet) do |f| %>
-        <div class="field">
-          <%= f.text_area :content, placeholder: "投稿できます", style: "border: none; width: 100%;", class: "no-resize" %>
         </div>
-        <div class="space-between">
-          <%= f.label :picture, class: "image-upload-button" do %>
-            <i class="far fa-image"></i>
-            <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', style: "display: none;" %>
-          <% end %>
-          <%= f.submit "投稿", class: "btn btn-dark", style: "float: right;" %>
+        <div>
+          <%= @user.introduction %>
         </div>
-      <% end %>
-    </div>
-    <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
-      <div class="mt-3">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-            <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
-              <li class="nav-item">
-                <a class="nav-link text-center px-5" href="#" id="allTweets">つぶやき</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロー</a>
-              </li>
-            </ul>
+      </div>
+      <!--投稿ホーム-->
+      <div class="tweet-form">
+        <%= form_for(@tweet) do |f| %>
+          <div class="field">
+            <%= f.text_area :content, placeholder: "投稿できます", style: "border: none; width: 100%;", class: "no-resize" %>
           </div>
-        </nav>
-      
-        <% @user.tweets.each do |tweet| %>
-          <div class="tweet-container">
-            <%= link_to tweet_path(tweet.id), class: 'tweet-link' do %>
-              <div style="display: flex; align-items: center;">
-                <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-                <div class="ml-3"><%= @user.username %></div>
-              </div>
-              <div class="mt-2 mb-4 ml-5"><%= tweet.content %></div>
-              <div style="display: flex; justify-content: flex-start;">
-                <div>
-                  <% if tweet.liked_by?(current_user) %>
-                    <p>
-                      <%= link_to tweet_like_path(tweet), method: :delete do %>
-                        <i class="fa-solid fa-heart"></i>
-                        <span class="like-count"><%= tweet.likes.count %></span>
-                      <% end %>
-                    </p>
-                    <% else %>
-                    <p>
-                      <%= link_to tweet_like_path(tweet), method: :post do %>
-                        <i class="fa-regular fa-heart"></i>
-                        <span class="like-count"><%= tweet.likes.count %></span> 
-                      <% end %>
-                    </p>
-                  <% end %>
-                </div>
-                <div class="mx-3"><span>|</span></div>
-                <div style="margin-left: auto;">
-                  <span class="tweet-date">
-                    <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
-                  </span>
-                </div>
-              </div>
+          <div class="space-between">
+            <%= f.label :picture, class: "image-upload-button" do %>
+              <i class="far fa-image"></i>
+              <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', style: "display: none;" %>
             <% end %>
+            <%= f.submit "投稿", class: "btn btn-dark", style: "float: right;" %>
           </div>
         <% end %>
+      </div>
+      <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
+        <div class="mt-3">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+              <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link text-center px-5" href="#" id="allTweets">つぶやき</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロー</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        
+          <% @user.tweets.each do |tweet| %>
+            <div class="tweet-container">
+              <%= link_to tweet_path(tweet.id), class: 'tweet-link' do %>
+                <div style="display: flex; align-items: center;">
+                  <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+                  <div class="ml-3"><%= @user.username %></div>
+                </div>
+                <div class="mt-2 mb-4 ml-5"><%= tweet.content %></div>
+                <div style="display: flex; justify-content: flex-start;">
+                  <div>
+                    <% if tweet.liked_by?(current_user) %>
+                      <p>
+                        <%= link_to tweet_like_path(tweet), method: :delete do %>
+                          <i class="fa-solid fa-heart"></i>
+                          <span class="like-count"><%= tweet.likes.count %></span>
+                        <% end %>
+                      </p>
+                      <% else %>
+                      <p>
+                        <%= link_to tweet_like_path(tweet), method: :post do %>
+                          <i class="fa-regular fa-heart"></i>
+                          <span class="like-count"><%= tweet.likes.count %></span> 
+                        <% end %>
+                      </p>
+                    <% end %>
+                  </div>
+                  <div class="mx-3"><span>|</span></div>
+                  <div style="margin-left: auto;">
+                    <span class="tweet-date">
+                      <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
+                    </span>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-5">
+      <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
+        <div class="mt-3">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+              <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link text-center px-5" href="#" id="allTweets">フォロー</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロワー</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
       </div>
     </div>
   </div>
