コメント機能

--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -60,6 +60,12 @@
                     <% end %>
                   </div>
                   <div class="mx-3"><span>|</span></div>
+                  <div>
+                    <%= link_to tweet_path(tweet.id) do %>
+                      <i class="fa-regular fa-comment-dots"></i>
+                      <span class="comment-count"><%= tweet.comments.count %></span>
+                    <% end %>
+                  </div>
                   <div style="margin-left: auto;">
                     <span class="tweet-date">
                       <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
