--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -20,7 +20,7 @@
               <% else %>
               <!-- フォローボタンとDMボタンを表示する -->
                 <%= button_to "Follow", followings_path(@user), method: :post %>
-                <!--<%= button_to "Send DM", new_message_path(user_id: @user.id) %>-->
+  
               <% end %>
             </div>
         </div>
@@ -85,6 +85,12 @@
                     <% end %>
                   </div>
                   <div class="mx-3"><span>|</span></div>
+                  <div>
+                    <%= link_to tweet_path(tweet.id) do %>
+                      <i class="fa-regular fa-comment-dots"></i>
+                      <span class="comment-count"><%= tweet.comments.count %></span>
+                    <% end %>
+                  </div>
                   <div style="margin-left: auto;">
                     <span class="tweet-date">
                       <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
