フォロー機能修正

--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -19,8 +19,7 @@
               </div>
               <% else %>
               <!-- フォローボタンとDMボタンを表示する -->
-                <%= button_to "Follow", followings_path(@user), method: :post %>
-  
+                <%= render "user/relationships/btn", user: @user, options: { class: ""} %>
               <% end %>
             </div>
         </div>
