--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -56,49 +56,51 @@
               </ul>
             </div>
           </nav>
-        
-          <% @user.tweets.each do |tweet| %>
-            <div class="tweet-container">
-              <%= link_to tweet_path(tweet.id), class: 'tweet-link' do %>
-                <div style="display: flex; align-items: center;">
-                  <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-                  <div class="ml-3"><%= @user.username %></div>
-                </div>
-                <div class="mt-2 mb-4 ml-5"><%= tweet.content %></div>
-                <div style="display: flex; justify-content: flex-start;">
-                  <div>
-                    <% if tweet.liked_by?(current_user) %>
-                      <p>
-                        <%= link_to tweet_like_path(tweet), method: :delete do %>
-                          <i class="fa-solid fa-heart"></i>
-                          <span class="like-count"><%= tweet.likes.count %></span>
-                        <% end %>
-                      </p>
-                      <% else %>
-                      <p>
-                        <%= link_to tweet_like_path(tweet), method: :post do %>
-                          <i class="fa-regular fa-heart"></i>
-                          <span class="like-count"><%= tweet.likes.count %></span> 
-                        <% end %>
-                      </p>
-                    <% end %>
+          
+          <div id="allTweetsContent" style="display: none;">
+            <% @user.tweets.each do |tweet| %>
+              <div class="tweet-container">
+                <%= link_to tweet_path(tweet.id), class: 'tweet-link' do %>
+                  <div style="display: flex; align-items: center;">
+                    <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+                    <div class="ml-3"><%= @user.username %></div>
                   </div>
-                  <div class="mx-3"><span>|</span></div>
-                  <div>
-                    <%= link_to tweet_path(tweet.id) do %>
-                      <i class="fa-regular fa-comment-dots"></i>
-                      <span class="comment-count"><%= tweet.comments.count %></span>
-                    <% end %>
+                  <div class="mt-2 mb-4 ml-5"><%= tweet.content %></div>
+                  <div style="display: flex; justify-content: flex-start;">
+                    <div>
+                      <% if tweet.liked_by?(current_user) %>
+                        <p>
+                          <%= link_to tweet_like_path(tweet), method: :delete do %>
+                            <i class="fa-solid fa-heart"></i>
+                            <span class="like-count"><%= tweet.likes.count %></span>
+                          <% end %>
+                        </p>
+                        <% else %>
+                        <p>
+                          <%= link_to tweet_like_path(tweet), method: :post do %>
+                            <i class="fa-regular fa-heart"></i>
+                            <span class="like-count"><%= tweet.likes.count %></span> 
+                          <% end %>
+                        </p>
+                      <% end %>
+                    </div>
+                    <div class="mx-3"><span>|</span></div>
+                    <div>
+                      <%= link_to tweet_path(tweet.id) do %>
+                        <i class="fa-regular fa-comment-dots"></i>
+                        <span class="comment-count"><%= tweet.comments.count %></span>
+                      <% end %>
+                    </div>
+                    <div style="margin-left: auto;">
+                      <span class="tweet-date">
+                        <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
+                      </span>
+                    </div>
                   </div>
-                  <div style="margin-left: auto;">
-                    <span class="tweet-date">
-                      <%= tweet.created_at.strftime("%Y/%m/%d %H:%M") %>
-                    </span>
-                  </div>
-                </div>
-              <% end %>
-            </div>
-          <% end %>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
