--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -75,3 +75,31 @@
     width: 50px;
     text-align: center
 }
+
+.tab-group{
+  display: flex;
+  justify-content: center;
+}
+.tab{
+  flex-grow: 1;
+  padding:5px;
+  list-style:none;
+  border:solid 10px #CCC;
+  text-align:center;
+  cursor:pointer;
+}
+.panel-group{
+  height:100px;
+}
+
+.panel{
+  display:none;
+}
+.tab.is-active{
+  background:#F00;
+  color:#FFF;
+  transition: all 0.2s ease-out;
+}
+.panel.is-show{
+  display:block;
+}
