--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -28,12 +28,13 @@
             </ul>
           </div>
         </nav>
-        
-        <div id="allTweetsContent">
-          <%= render 'user/tweets/tweets', tweets: @tweets %>
-        </div>
-        <div id="followingTweets">
-          <%= render 'user/tweets/following_tweets', tweets: @tweets %>
+        <div id="tweetList">
+          <div id="allTweetsContent">
+            <%= render 'user/tweets/tweets', tweets: @tweets %>
+          </div>
+          <div id="followingTweetsContent">
+            <%= render 'user/tweets/following_tweets', tweets: @following_tweets %>
+          </div>
         </div>
       </div>
     </div>
@@ -43,36 +44,23 @@
   $(document).ready(function() {
     $('#allTweets').click(function(e) {
       e.preventDefault();
-      $('.nav-link').removeClass('selected-link');
-      $(this).addClass('selected-link');
-
-      $.ajax({
-        type: 'GET',
-        url: '/tweets',
-        success: function(response) {
-          $('#allTweetsContent').html(response);
-        },
-        error: function(xhr, status, error) {
-          console.error(error);
-        }
-      });
+      $('.nav-link').removeClass('selected-link'); // すべてのリンクから選択クラスを削除
+      $(this).addClass('selected-link'); // クリックされたリンクに選択クラスを追加
+      $('#followingTweetsContent').hide(); // フォローのコンテンツを非表示にする
+      $('#allTweetsContent').show(); // つぶやきのコンテンツを表示する
     });
 
     $('#followingTweets').click(function(e) {
       e.preventDefault();
-      $('.nav-link').removeClass('selected-link');
-      $(this).addClass('selected-link');
-
-      $.ajax({
-        type: 'GET',
-        url: '/tweets/following_tweets',
-        success: function(response) {
-          $('#allTweetsContent').html(response);
-        },
-        error: function(xhr, status, error) {
-          console.error(error);
-        }
-      });
+      $('.nav-link').removeClass('selected-link'); // すべてのリンクから選択クラスを削除
+      $(this).addClass('selected-link'); // クリックされたリンクに選択クラスを追加
+      $('#allTweetsContent').hide(); // つぶやきのコンテンツを非表示にする
+      $('#followingTweetsContent').show(); // フォローのコンテンツを表示する
     });
+
+    // 以下の部分を追加
+    // 初期表示では「つぶやき」が選択されているようにする
+    $('#allTweets').addClass('selected-link');
+    $('#followingTweetsContent').hide(); // 初期表示ではフォローツイートを非表示にする
   });
 </script>
