レイアウト修正

--- a/app/views/user/tweets/_following_tweets.html.erb
+++ b/app/views/user/tweets/_following_tweets.html.erb
@@ -1,5 +1,5 @@
-<% if tweets.present? %>
-  <% tweets.each do |tweet| %>
+<% if following_tweets.present? %>
+  <% following_tweets.each do |tweet| %>
     <div class="tweet-container">
       <%= link_to tweet_path(tweet.id), class: 'tweet-link' do %>
         <div style="display: flex; align-items: center;">
