--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -28,17 +28,36 @@
             </ul>
           </div>
         </nav>
+        
         <div id="tweetList">
           <div id="allTweetsContent">
             <%= render 'user/tweets/tweets', tweets: @tweets %>
           </div>
           <div id="followingTweetsContent">
-            <%= render 'user/tweets/following_tweets', tweets: @following_tweets %>
+            <%= render 'user/tweets/following_tweets', following_tweets: @following_tweets %>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <div class="col-md-5">
+      <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
+        <div class="mt-3">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+              <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link text-center px-5" href="#" id="allTweets">フォロー</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロワー</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </div>
 </div>
 <script>
   $(document).ready(function() {
