--- a/app/views/user/tweets/index.html.erb
+++ b/app/views/user/tweets/index.html.erb
@@ -1,63 +1,74 @@
 <div class="container px-5 px-sm-0">
-  <div class="col-md-7">
-    <div class="tweet-form">
-      <%= form_for(@tweet) do |f| %>
-        <div class="field">
-          <%= f.text_area :content, placeholder: "投稿できます", style: "border: none; width: 100%;", class: "no-resize" %>
-        </div>
-        <div class="space-between">
-          <%= f.label :picture, class: "image-upload-button" do %>
-            <i class="far fa-image"></i>
-            <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', style: "display: none;" %>
-          <% end %>
-          <%= f.submit "投稿", class: "btn btn-dark", style: "float: right;" %>
-        </div>
-      <% end %>
-    </div>
-    <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
-      <div class="mt-3">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-            <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
-              <li class="nav-item">
-                <a class="nav-link text-center px-5" href="#" id="allTweets">つぶやき</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロー</a>
-              </li>
-            </ul>
+  <div class="row">
+    <div class="col-md-7">
+      <div class="tweet-form">
+        <%= form_for(@tweet) do |f| %>
+          <div class="field">
+            <%= f.text_area :content, placeholder: "投稿できます", style: "border: none; width: 100%;", class: "no-resize" %>
           </div>
-        </nav>
-        
-        <div id="tweetList">
-          <div id="allTweetsContent">
-            <%= render 'user/tweets/tweets', tweets: @tweets %>
+          <div class="space-between">
+            <%= f.label :picture, class: "image-upload-button" do %>
+              <i class="far fa-image"></i>
+              <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', style: "display: none;" %>
+            <% end %>
+            <%= f.submit "投稿", class: "btn btn-dark", style: "float: right;" %>
           </div>
-          <div id="followingTweetsContent">
-            <%= render 'user/tweets/following_tweets', following_tweets: @following_tweets %>
-          </div>
-        </div>
+        <% end %>
       </div>
-    </div>
-  </div>
-  <div class="col-md-5">
       <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
         <div class="mt-3">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
               <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
                 <li class="nav-item">
-                  <a class="nav-link text-center px-5" href="#" id="allTweets">フォロー</a>
+                  <a class="nav-link text-center px-5" href="#" id="allTweets">つぶやき</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロワー</a>
+                  <a class="nav-link text-center px-5" href="#" id="followingTweets">フォロー</a>
                 </li>
               </ul>
             </div>
           </nav>
+          
+          <div id="tweetList">
+            <div id="allTweetsContent">
+              <%= render 'user/tweets/tweets', tweets: @tweets %>
+            </div>
+            <div id="followingTweetsContent">
+              <%= render 'user/tweets/following_tweets', following_tweets: @following_tweets %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <div class="col-md-5">
+      <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
+        <div class="mt-3">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+              <ul class="navbar-nav mx-auto d-flex flex-row justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link text-center px-5" href="#" id="followingUsers">フォロー</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-center px-5" href="#" id="followersUsers">フォロワー</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          
+          <div id="followList">
+            <div id="followingUsersContent">
+              <%= render 'user/users/following', users: @user %>
+            </div>
+            <div id="followersUsersContent">
+              <%= render 'user/users/followers', users: @user %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <script>
   $(document).ready(function() {
@@ -81,5 +92,26 @@
     // 初期表示では「つぶやき」が選択されているようにする
     $('#allTweets').addClass('selected-link');
     $('#followingTweetsContent').hide(); // 初期表示ではフォローツイートを非表示にする
+    
+    $('#followingUsers').click(function(e) {
+      e.preventDefault();
+      $('.nav-link').removeClass('selected-link'); // すべてのリンクから選択クラスを削除
+      $(this).addClass('selected-link'); // クリックされたリンクに選択クラスを追加
+      $('#followersUsersContent').hide(); // フォロワーのコンテンツを非表示にする
+      $('#followingUsersContent').show(); // フォローのコンテンツを表示する
+    });
+
+    $('#followersUsers').click(function(e) {
+      e.preventDefault();
+      $('.nav-link').removeClass('selected-link'); // すべてのリンクから選択クラスを削除
+      $(this).addClass('selected-link'); // クリックされたリンクに選択クラスを追加
+      $('#followingUsersContent').hide(); // フォローのコンテンツを非表示にする
+      $('#followersUsersContent').show(); // フォロワーのコンテンツを表示する
+    });
+
+    // 以下の部分を追加
+    // 初期表示では「つぶやき」が選択されているようにする
+    $('#followingUsers').addClass('selected-link');
+    $('#followersUsersContent').hide(); // 初期表示ではフォロワーツイートを非表示にする
   });
 </script>
