--- a/app/views/user/tweets/show.html.erb
+++ b/app/views/user/tweets/show.html.erb
@@ -6,11 +6,11 @@
           <div style="display: flex; flex-direction: column; border-bottom-style: double; border-bottom-width: 2px;">
             <div style="display: flex; align-items: center; justify-content: space-between;">
               <div style="display: flex; align-items: center;">
-                <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-                <div class="ml-3"><%= @user.username %></div>
+                <%= image_tag @tweet.user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+                <div class="ml-3"><%= @tweet.user.username %></div>
               </div>
             </div> 
-            <div class="mt-5 mb-5 ml-5">
+            <div class="mt-3 mb-3 ml-3">
               <%= @tweet.content %>
             </div> 
             <div class="ml-3 mr-3">
