--- a/app/views/user/rooms/show.html.erb
+++ b/app/views/user/rooms/show.html.erb
@@ -1,21 +1,37 @@
-<% @entries.each do |e| %>
-  <% if @myUserId != e.user.id %>
-      <h2><%= e.user.username %>さんとのトークルーム</h2>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="container px-5 px-sm-0">
+      <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
+        <div class="p-3">
+          <% @entries.each do |e| %>
+            <% if @myUserId != e.user.id %>
+                <h2><%= e.user.username %>さんとのトークルーム</h2>
+              </div>
+            <% end %>
+          <% end %>
+          <%= link_to "ツイート一覧に戻る", tweets_path %>
+          
+             <% if @messages.present? %>
+               <% @messages.each do |m| %>
+                 <% @myUserId == m.user.id  %>
+                  <div style="display: flex; flex-direction: column; border-bottom-style: double; border-bottom-width: 2px;">
+                    <div class="mt-3 mx-3">
+                     <p><%= m.user.username %></p>
+                       <p><%= m.message %></p>
+                    </div>
+                  </div>
+               <% end %>
+             <% end %>
+            
+          <div class="mt-4 mb-4">
+            <%= form_for @message do |f| %>
+               <%= f.text_field :message, placeholder: "メッセージを入力して下さい" , size: 50, class:"form-text-field" %>
+                  <%= f.hidden_field :room_id, value: @room.id %>
+                    <%= f.submit "投稿",class: 'form-submit'%>
+             <% end %>
+          </div>
+        </div>
+      </div>
     </div>
-  <% end %>
-<% end %>
-<%= link_to "ツイート一覧に戻る", tweets_path %>
-
-   <% if @messages.present? %>
-     <% @messages.each do |m| %>
-       <% @myUserId == m.user.id  %>
-       <p><%= m.user.username %></p>
-         <p><%= m.message %></p>
-     <% end %>
-   <% end %>
-   
-<%= form_for @message do |f| %>
-   <%= f.text_field :message, placeholder: "メッセージを入力して下さい" , size: 50, class:"form-text-field" %>
-      <%= f.hidden_field :room_id, value: @room.id %>
-        <%= f.submit "投稿",class: 'form-submit'%>
- <% end %>
+  </div>
+</div>
