--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,7 +1,7 @@
 <!--マイページ-->
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="container px-5 px-sm-0">
+    <div class="col-md-7">
       <!--プロフィール-->
       <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
         <div style="display: flex; align-items: center; justify-content: space-between;">
