--- a/app/views/user/tweets/show.html.erb
+++ b/app/views/user/tweets/show.html.erb
@@ -13,6 +13,14 @@
             <div class="mt-3 mb-3 ml-3">
               <%= @tweet.content %>
             </div> 
+            <div class="ml-3 mb-3">
+              <div class="content_image">
+                <% if @tweet.image.attached? %>
+                  <%= image_tag @tweet.resized_image(500), style: "max-height: 300px; width: auto; max-width: 100%;" %>
+                <% end %>
+              </div>
+            </div>
+            
             <div class="ml-3 mr-3">
               <div style="display: flex; justify-content: flex-start;">
                 <div>
@@ -49,11 +57,11 @@
           </div>
         </div>
         <%= render 'user/tweets/comment', tweet: @tweet %>
-      </div>
-      <div class="fixed-bottom">
+      
+        <!-- コメントフォーム -->
         <div class="container px-5">
           <div class="row">
-            <div class="col-px-5" style="width: 100%;">
+            <div class="col-12">
               <%= form_with model: [@tweet, @comment] do |f| %>
                 <div class="row">
                   <div class="col">
