レイアウト修正

--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -25,7 +25,7 @@
               <% end %>
             </div>
         </div>
-        <div>
+        <div class="p-3">
           <%= @user.introduction %>
         </div>
       </div>
