--- a/app/views/user/registrations/edit.html.erb
+++ b/app/views/user/registrations/edit.html.erb
@@ -4,45 +4,52 @@
       <div style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 20px;">
         <div class="p-3">
           <h2>ユーザー情報編集 <%= resource_name.to_s.humanize %></h2>
-        
+
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
-          
+
             <div class="field">
               <%= f.label :email %><br />
               <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
             </div>
-          
+
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
               <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
             <% end %>
-            
+
             <div class="mt-3">
               <div class="field">
                 <%= f.label 'ユーザー名' %><br />
                 <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
               </div>
             </div>
-            
+
+            <div class="mt-">
+              <div class="field">
+                <%= f.label '紹介文' %><br />
+                <%= f.text_field :introduction, autofocus: true, autocomplete: "introduction" %>
+              </div>
+            </div>
+
             <div class="mt-3">
               <div class="field">
                 <%= f.label 'プロフィール画像' %><br />
                 <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
               </div>
             </div>
-            
+
             <div class="mt-3">
               <div class="actions">
                 <%= f.submit "Update" %>
               </div>
             </div>
-            
+
           <% end %>
-          
-          
-          
+
+
+
           <div>退会しますか? <%= button_to "退会する", registration_path(resource_name), data: { confirm: "本当に退会しますか?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-          
+
           <%= link_to "Back", :back %>
         </div>
       </div>
