--- a/app/views/user/tweets/_comment.html.erb
+++ b/app/views/user/tweets/_comment.html.erb
@@ -3,7 +3,7 @@
     <div style="display: flex; flex-direction: column; border-bottom-style: double; border-bottom-width: 2px;" class="p-3">
       <div style="display: flex; align-items: center;">
         <%= image_tag comment.user.get_profile_image(50, 50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-        <div class="ml-3"><%= comment.user.username %></div>
+        <div class="ml-3"><%= link_to comment.user.username, user_path(@tweet.user), class: 'user-link' %></div>
       </div>
       <div class="mt-3 mb-3 ml-3 p-3">
         <div class="ml-3"><%= comment.comment %></div>
