--- a/app/views/user/tweets/show.html.erb
+++ b/app/views/user/tweets/show.html.erb
@@ -7,7 +7,7 @@
             <div style="display: flex; align-items: center; justify-content: space-between;">
               <div style="display: flex; align-items: center;">
                 <%= image_tag @tweet.user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-                <div class="ml-3"><%= @tweet.user.username %></div>
+                <div class="ml-3"><%= link_to @tweet.user.username, user_path(@tweet.user), class: 'user-link' %></div>
               </div>
             </div> 
             <div class="mt-3 mb-3 ml-3">
