--- a/app/views/user/users/_followers.html.erb
+++ b/app/views/user/users/_followers.html.erb
@@ -4,7 +4,7 @@
      <div style="display: flex; align-items: center; justify-content: space-between;">
       <div style="display: flex; align-items: center;">
         <%= image_tag user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-        <div class="ml-3"><%= user.username %></div>
+        <div class="ml-3"><%= link_to user.username, user_path(user), class: 'user-link' %></div>
       </div>
       <%= render "user/relationships/btn", user: user, options: { class: ""} %>
      </div>
