--- a/app/views/user/users/_like_tweets.html.erb
+++ b/app/views/user/users/_like_tweets.html.erb
@@ -3,8 +3,8 @@
               <div class="tweet-container">
                 <%= link_to tweet_path(tweet.id), class: 'tweet-link' do %>
                   <div style="display: flex; align-items: center;">
-                    <%= image_tag @user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
-                    <div class="ml-3"><%= @user.username %></div>
+                    <%= image_tag tweet.user.get_profile_image(50,50), style: "border-radius: 50%; width: 50px; height: 50px;" %>
+                    <div class="ml-3"><%= tweet.user.username %></div>
                   </div>
                   <div class="mt-2 mb-4 ml-5"><%= tweet.content %></div>
                   <div style="display: flex; justify-content: flex-start;">
